# Maestro

./: .gitignore  CHANGELOG.md  CLAUDE.md  COWORK_CONTEXT.md  DOGFOOD_LOG.md  README.md  SUGGESTIONS.md  TODO.md  agent-orchestrator-spec.md  main.py  proctor-a-phase2.yaml  proctor-a-scheduler.yaml  pyproject.toml  v010-prep.yaml
.claude/skills/spec-generator-skill/templates/: executor.py  task.py
.github/workflows/: ci.yml
_cowork_output/: 01-architecture-map.md  02-dag-scheduler-analysis.md  03-agent-integration.md  04-code-quality-ops.md  05-architecture-improvements.md  06-roadmap.md  07-competitive-analysis.md  08-tasks.md  09-r03-arbiter-mcp-client-review.md
_cowork_output/decisions/: 2026-04-19-cross-project-observability-design.md
_cowork_output/plans/: 2026-04-19-observability-plan-1-to-m1.md
_cowork_output/reviews/: 2026-04-19-observability-spec-review.md
_cowork_output/status/: obs-m1-reached-2026-04-19.md
docs/: debugging.md
docs/superpowers/plans/: 2026-04-05-week1-safety-fixes.md  2026-04-05-week2-dogfood-fixes.md  2026-04-16-r03-arbiter-mcp-client.md
docs/superpowers/specs/: 2026-04-05-maestro-dogfood-roadmap-design.md  2026-04-06-mode2-first-run-design.md  2026-04-06-v010-open-source-prep-design.md  2026-04-16-r03-arbiter-mcp-client-design.md
examples/: dogfood-maestro.yaml  hello.yaml  maestro-builds-maestro.yaml  parallel-refactor.yaml  project.yaml  tasks.yaml  with-arbiter.yaml  with-atp-validation.yaml
maestro/: __init__.py  cli.py  config.py  cost_tracker.py  dag.py  database.py  decomposer.py  event_log.py  git.py  merge_logs.py  models.py  orchestrator.py  pr_manager.py  recovery.py  retry.py  scheduler.py  spec_runner.py  validator.py  workspace.py
maestro/_vendor/: obs.py
maestro/benchmark/: __init__.py  models.py  runner.py  spawner_responder.py
maestro/coordination/: __init__.py  arbiter_client.py  arbiter_errors.py  mcp_server.py  rest_api.py  routing.py
maestro/dashboard/: __init__.py  app.py
maestro/dashboard/static/: index.html
maestro/notifications/: __init__.py  base.py  desktop.py  manager.py
maestro/schemas/: generate.py  orchestrator_config.json  project_config.json
maestro/spawners/: __init__.py  aider.py  announce.py  base.py  claude_code.py  codex.py  registry.py
spec/: .executor-progress.txt  .executor-state.json  design.md  requirements.md  tasks.md
tests/: __init__.py  _obs_child.py  conftest.py  test_arbiter_client_structure.py  test_arbiter_config.py  test_arbiter_errors.py  test_arbiter_real_subprocess.py  test_arbiter_routing.py  test_async.py  test_benchmark_runner.py  test_cli.py  test_config.py  test_cost_tracker.py  test_dag.py  test_dashboard.py  test_database.py  test_decomposer.py  test_event_log.py  test_event_log_arbiter.py  test_git.py  test_git_worktree.py  test_make_routing_strategy.py  test_mcp_server.py  test_merge_logs.py  test_messages.py  test_models.py  test_notifications.py  test_obs_integration.py  test_orchestrator.py  test_package.py  test_pr_manager.py  test_recovery.py  test_recovery_arbiter.py  test_rest_api.py  test_rest_zadachi.py  test_retry.py  test_routing_models.py  test_routing_static.py  test_scheduler.py  test_scheduler_arbiter_integration.py  (+11 more)
tests/fakes/: __init__.py  fake_arbiter_client.py
